# stm32f746g-disco

./: Cargo.toml  README.md  memory.x  openocd.cfg
examples/: blinky.rs  serial_echo.rs
src/: led.rs  lib.rs
